--- a/src/ui/Home/Home.module.css
+++ b/src/ui/Home/Home.module.css
@@ -10,6 +10,32 @@
     text-align: center;
 }
 
+.cardTitle {
+    background: #000000de;
+    position: absolute;
+    bottom: 0;
+    color: white;
+    width: 100%;
+    display: flex;
+    /* justify-content: center; */
+    padding: 16px 0 !important;
+    text-align: start;
+}
+
+.cardDescription {
+    background: #000000de;
+    position: absolute;
+    bottom: 0;
+    color: white;
+    /* width: 100%; */
+    padding: 16px 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: start;
+}
+
 @media (min-width: 1200px) {
     .home {
         max-width: 60vw;
